--- a/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f9f8fe;
+  background-color: (--tertiary-color);
 }
 
 @media only screen and (min-width: 768px) {
