--- a/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
@@ -2,10 +2,15 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  border: 1px solid #e7dfdf;
+  border: 1px solid var(--button-border);
   padding: 0.8rem;
   width: 100%;
   @include card-style;
+  transition: border-color 0.3s ease;
+
+  &:hover {
+    border-color: var(--primary-color);
+  }
 }
 
 .image {
@@ -19,31 +24,35 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 60%;
 }
 
 .serviceName {
   font-weight: 800;
   font-size: 1.2rem;
+  color: var(--text-color);
 }
 
 .info {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .icon,
 .contactPerson {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .address,
 .service {
-  color: #958f8f;
+  color: var(--text-color);
+  opacity: 0.7;
 }
 
 .dateAndTime {
-  color: $secondary-color;
+  color: var(--secondary-color);
   font-weight: 500;
   margin-left: 0.5rem;
 }
