--- a/home-service-full-stack/frontend/src/components/common/Avatar.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Avatar.module.scss
@@ -1,7 +1,7 @@
 .avatar {
   position: relative;
   background-color: #025033;
-  color: $tertiary-color;
+  color: var(--tertiary-color);
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
