--- a/home-service-full-stack/frontend/src/components/common/Modal.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Modal.module.scss
@@ -18,6 +18,8 @@
   position: absolute;
   top: 53%;
   left: 43%;
+  background-color: var(--card-bg);
+  color: var(--text-color);
 }
 
 .modalContent {
@@ -28,7 +30,8 @@
   width: 100%;
   height: 100%;
   padding: 2rem 4rem;
-  background-color: hsl(36deg, 100%, 99%);
+  background-color: var(--card-bg);
+  color: var(--text-color);
   overflow-y: auto;
 }
 
@@ -43,7 +46,8 @@
 
 .imageModalContent {
   position: relative;
-  background: #fff;
+  background-color: var(--card-bg);
+  color: var(--text-color);
   border-radius: 0.5rem;
   padding: 1.7rem;
   max-width: 90%;
@@ -56,7 +60,7 @@
   top: 1rem;
   right: 1.5rem;
   cursor: pointer;
-  color: #7c7878;
+  color: var(--text-color);
 }
 
 .accountCloseButton {
@@ -71,7 +75,7 @@
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #333;
+  color: var(--text-color);
 }
 
 @media only screen and (min-width: 390px) {
