--- a/home-service-full-stack/frontend/src/components/pages/Home/Home.module.scss
+++ b/home-service-full-stack/frontend/src/components/pages/Home/Home.module.scss
@@ -9,11 +9,12 @@
 }
 
 .primary {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .subtitle {
-  color: #a8a8a8;
+  color: var(--text-color);
+  opacity: 0.7;
   line-height: 1.5rem;
   padding: 1rem;
 }
