--- a/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
+++ b/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
@@ -1,8 +1,8 @@
 .title {
   font-size: 1.3rem;
+  font-weight: 800;
 }
 
-.title,
 .subtitle {
   font-weight: 800;
 }
@@ -18,8 +18,8 @@
 }
 
 .time {
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
+  background-color: var(--input-bg);
+  border: 1px solid var(--button-border);
   border-radius: 1.25rem;
   padding: 0.8rem 0;
   text-align: center;
@@ -28,12 +28,12 @@
   transition: all 0.3s ease;
 
   &:hover {
-    background-color: #d8cdcd;
+    background-color: var(--shadow-color);
   }
 
   &:focus {
-    color: $tertiary-color;
-    background-color: #505cc5;
+    color: var(--tertiary-color);
+    background-color: var(--primary-color);
   }
 }
 
