--- a/home-service-full-stack/frontend/src/styles/index.scss
+++ b/home-service-full-stack/frontend/src/styles/index.scss
@@ -92,6 +92,7 @@ video {
   font-size: 100%;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -106,17 +107,26 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
+  background-color: var(--tertiary-color);
+  color: var(--text-color);
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -124,6 +134,7 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -131,6 +142,7 @@ table {
 
 a {
   text-decoration: none;
+  color: var(--primary-color);
 }
 
 a:hover {
@@ -138,7 +150,7 @@ a:hover {
 }
 
 input:focus-visible {
-  outline-color: $primary-color;
+  outline-color: var(--primary-color);
 }
 
 #root {
