changed primary color for a better look

--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #8056eb;
-  --primary-color-hover: #6a4bc7;
+  --primary-color: #7655cc;
+  --primary-color-hover: #563da3;
   --secondary-color: #000000;
   --tertiary-color: #ffffff;
   --category-card-color: #f2eefd;
