changed primary color for a better look #2

--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #7655cc;
-  --primary-color-hover: #563da3;
+  --primary-color-hover: #533c99;
   --secondary-color: #000000;
   --tertiary-color: #ffffff;
   --category-card-color: #f2eefd;
@@ -20,7 +20,7 @@
 
 [data-theme="dark"] {
   --primary-color: #9a7aed;
-  --primary-color-hover: #8056eb;
+  --primary-color-hover: #5c419f;
   --secondary-color: #ffffff;
   --tertiary-color: #121212;
   --category-card-color: #2a233a;
