some changes with style

--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -14,7 +14,7 @@
   --error-color: #ff0000;
   --error-hover: #d00d0d;
   --button-border: #e0e0e0;
-  --favorite-hover: #e7245f;
+  --favorite-hover: #fa2968;
   --language-focus-and-hover: #e7245f;
 }
 
