--- a/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
@@ -37,7 +37,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  flex-wrap: wrap;
+  font-size: 0.85rem;
 }
 
 .icon,
@@ -64,5 +64,9 @@
 
   .serviceName {
     font-size: 1.2rem;
+  }
+
+  .info {
+    font-size: 1rem;
   }
 }
