added update account form

--- a/home-service-full-stack/frontend/src/components/common/Button.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Button.module.scss
@@ -29,6 +29,11 @@
       background-color: var(--error-hover);
     }
   }
+  &.update {
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
 
   &.language {
     font-weight: 700;
