added input for the photo change

--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -14,9 +14,17 @@
   text-align: left;
 }
 
+.fileLabel {
+  margin-right: 0.5rem;
+}
+
 .input {
   width: 100%;
   @include input-style;
+}
+
+.fileInput {
+  margin-top: 0.5rem;
 }
 
 .error {
