--- a/home-service-full-stack/frontend/src/components/common/Avatar.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Avatar.module.scss
@@ -12,3 +12,11 @@
   text-transform: capitalize;
   cursor: pointer;
 }
+
+.avatarImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+}
