--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -60,6 +60,28 @@
   }
 }
 
+.inputWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.eyeButton {
+  background: transparent;
+  border: none;
+  position: absolute;
+  right: 0.625rem;
+  top: 60%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  padding: 0;
+  color: #999999;
+
+  &:hover {
+    color: #333333;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .search {
     font-size: 1rem;
