added required asterisk to the input

--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -82,6 +82,10 @@
   }
 }
 
+.requiredAsterisk {
+  color: #ff0000;
+}
+
 @media only screen and (min-width: 768px) {
   .search {
     font-size: 1rem;
