Changed MUI imports for a better performance

--- a/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
@@ -13,6 +13,19 @@
   background-color: (--tertiary-color);
 }
 
+.loadingBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+
 @media only screen and (min-width: 768px) {
   .rootContainer {
     padding: 6rem;
