--- a/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
+++ b/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
@@ -48,6 +48,13 @@
   gap: 0.5rem;
 }
 
+.buttonWithNoteBook {
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  color: inherit;
+}
+
 @media only screen and (min-width: 500px) {
   .calendar {
     width: 100%;
