Fixed probem with avatar size

--- a/home-service-full-stack/frontend/src/components/common/ResponsiveImage.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/ResponsiveImage.module.scss
@@ -1,7 +1,10 @@
 .responsiveImage {
-  width: 100%;
-  height: auto;
   aspect-ratio: 3 / 2;
   object-fit: cover;
   display: block;
+}
+
+.imageNotAvatar {
+  width: 100%;
+  height: auto;
 }
