Changed button display to flex for a better icon/text look

--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -122,6 +122,8 @@ body {
 }
 
 @mixin button-style {
+  display: flex;
+  align-items: center;
   padding: 0.8rem;
   background-color: var(--primary-color);
   color: var(--tertiary-color);
