Some changes with button style for a better look

--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -124,6 +124,7 @@ body {
 @mixin button-style {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0.8rem;
   background-color: var(--primary-color);
   color: var(--tertiary-color);
